@@ -12035,9 +12035,6 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
     if (value != NULL)
     {
 
-    size_t
-      last;
-
     excluding=MagickTrue;
 
     if (logging != MagickFalse)
@@ -12050,81 +12047,73 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
               "  png:exclude-chunk=%s found in image properties.\n", value);
       }
 
-    last=strlen(value);
-
-    for (i=0; i<(int) last; i+=5)
+    if (IsOptionMember("none",value) != MagickFalse)
     {
+      mng_info->ping_exclude_bKGD=MagickFalse;
+      mng_info->ping_exclude_cHRM=MagickFalse;
+      mng_info->ping_exclude_date=MagickFalse;
+      mng_info->ping_exclude_EXIF=MagickFalse;
+      mng_info->ping_exclude_gAMA=MagickFalse;
+      mng_info->ping_exclude_iCCP=MagickFalse;
+      /* mng_info->ping_exclude_iTXt=MagickFalse; */
+      mng_info->ping_exclude_oFFs=MagickFalse;
+      mng_info->ping_exclude_pHYs=MagickFalse;
+      mng_info->ping_exclude_sRGB=MagickFalse;
+      mng_info->ping_exclude_tEXt=MagickFalse;
+      mng_info->ping_exclude_tRNS=MagickFalse;
+      mng_info->ping_exclude_vpAg=MagickFalse;
+      mng_info->ping_exclude_zCCP=MagickFalse;
+      mng_info->ping_exclude_zTXt=MagickFalse;
+    }
 
-      if (LocaleNCompare(value+i,"none",4) == 0)
-      {
-        mng_info->ping_exclude_bKGD=MagickFalse;
-        mng_info->ping_exclude_cHRM=MagickFalse;
-        mng_info->ping_exclude_date=MagickFalse;
-        mng_info->ping_exclude_EXIF=MagickFalse;
-        mng_info->ping_exclude_gAMA=MagickFalse;
-        mng_info->ping_exclude_iCCP=MagickFalse;
-        /* mng_info->ping_exclude_iTXt=MagickFalse; */
-        mng_info->ping_exclude_oFFs=MagickFalse;
-        mng_info->ping_exclude_pHYs=MagickFalse;
-        mng_info->ping_exclude_sRGB=MagickFalse;
-        mng_info->ping_exclude_tEXt=MagickFalse;
-        mng_info->ping_exclude_tRNS=MagickFalse;
-        mng_info->ping_exclude_vpAg=MagickFalse;
-        mng_info->ping_exclude_zCCP=MagickFalse;
-        mng_info->ping_exclude_zTXt=MagickFalse;
-      }
+    if (IsOptionMember("bkgd",value) != MagickFalse)
+      mng_info->ping_exclude_bKGD=MagickTrue;
 
-      if (LocaleNCompare(value+i,"bkgd",4) == 0)
-        mng_info->ping_exclude_bKGD=MagickTrue;
+    if (IsOptionMember("chrm",value) != MagickFalse)
+      mng_info->ping_exclude_cHRM=MagickTrue;
 
-      if (LocaleNCompare(value+i,"chrm",4) == 0)
-        mng_info->ping_exclude_cHRM=MagickTrue;
+    if (IsOptionMember("date",value) != MagickFalse)
+      mng_info->ping_exclude_date=MagickTrue;
 
-      if (LocaleNCompare(value+i,"date",4) == 0)
-        mng_info->ping_exclude_date=MagickTrue;
+    if (IsOptionMember("exif",value) != MagickFalse)
+      mng_info->ping_exclude_EXIF=MagickTrue;
 
-      if (LocaleNCompare(value+i,"exif",4) == 0)
-        mng_info->ping_exclude_EXIF=MagickTrue;
+    if (IsOptionMember("gama",value) != MagickFalse)
+      mng_info->ping_exclude_gAMA=MagickTrue;
 
-      if (LocaleNCompare(value+i,"gama",4) == 0)
-        mng_info->ping_exclude_gAMA=MagickTrue;
+    if (IsOptionMember("iccp",value) != MagickFalse)
+      mng_info->ping_exclude_iCCP=MagickTrue;
 
-      if (LocaleNCompare(value+i,"iccp",4) == 0)
-        mng_info->ping_exclude_iCCP=MagickTrue;
+  /*
+    if (IsOptionMember("itxt",value) != MagickFalse)
+      mng_info->ping_exclude_iTXt=MagickTrue;
+   */
 
-    /*
-      if (LocaleNCompare(value+i,"itxt",4) == 0)
-        mng_info->ping_exclude_iTXt=MagickTrue;
-     */
+    if (IsOptionMember("offs",value) != MagickFalse)
+      mng_info->ping_exclude_oFFs=MagickTrue;
 
-      if (LocaleNCompare(value+i,"gama",4) == 0)
-        mng_info->ping_exclude_gAMA=MagickTrue;
+    if (IsOptionMember("phys",value) != MagickFalse)
+      mng_info->ping_exclude_pHYs=MagickTrue;
 
-      if (LocaleNCompare(value+i,"offs",4) == 0)
-        mng_info->ping_exclude_oFFs=MagickTrue;
+    if (IsOptionMember("srgb",value) != MagickFalse)
+      mng_info->ping_exclude_sRGB=MagickTrue;
 
-      if (LocaleNCompare(value+i,"phys",4) == 0)
-        mng_info->ping_exclude_pHYs=MagickTrue;
+    if (IsOptionMember("text",value) != MagickFalse)
+      mng_info->ping_exclude_tEXt=MagickTrue;
 
-      if (LocaleNCompare(value+i,"srgb",4) == 0)
-        mng_info->ping_exclude_sRGB=MagickTrue;
+    if (IsOptionMember("trns",value) != MagickFalse)
+      mng_info->ping_exclude_tRNS=MagickTrue;
 
-      if (LocaleNCompare(value+i,"text",4) == 0)
-        mng_info->ping_exclude_tEXt=MagickTrue;
+    if (IsOptionMember("vpag",value) != MagickFalse)
+      mng_info->ping_exclude_vpAg=MagickTrue;
 
-      if (LocaleNCompare(value+i,"trns",4) == 0)
-        mng_info->ping_exclude_tRNS=MagickTrue;
+    if (IsOptionMember("zccp",value) != MagickFalse)
+      mng_info->ping_exclude_zCCP=MagickTrue;
 
-      if (LocaleNCompare(value+i,"vpag",4) == 0)
-        mng_info->ping_exclude_vpAg=MagickTrue;
+    if (IsOptionMember("ztxt",value) != MagickFalse)
+      mng_info->ping_exclude_zTXt=MagickTrue;
 
-      if (LocaleNCompare(value+i,"zccp",4) == 0)
-        mng_info->ping_exclude_zCCP=MagickTrue;
-
-      if (LocaleNCompare(value+i,"ztxt",4) == 0)
-        mng_info->ping_exclude_zTXt=MagickTrue;
-
-      if (LocaleNCompare(value+i,"all",3) == 0)
+    if (IsOptionMember("all",value) != MagickFalse)
       {
         mng_info->ping_exclude_bKGD=MagickTrue;
         mng_info->ping_exclude_cHRM=MagickTrue;
@@ -12141,10 +12130,7 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
         mng_info->ping_exclude_vpAg=MagickTrue;
         mng_info->ping_exclude_zCCP=MagickTrue;
         mng_info->ping_exclude_zTXt=MagickTrue;
-        i--;
       }
-
-    }
     }
   }
 
@@ -12167,12 +12153,9 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
 
     if (value != NULL)
     {
-    size_t
-      last;
+      excluding=MagickTrue;
 
-    excluding=MagickTrue;
-
-    if (logging != MagickFalse)
+      if (logging != MagickFalse)
       {
         if (source == 0)
            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
@@ -12182,12 +12165,7 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
               "  png:include-chunk=%s found in image properties.\n", value);
       }
 
-    last=strlen(value);
-
-    for (i=0; i<(int) last; i+=5)
-      {
-
-      if (LocaleNCompare(value+i,"none",4) == 0)
+      if (IsOptionMember("none",value) != MagickFalse)
         {
           mng_info->ping_exclude_bKGD=MagickTrue;
           mng_info->ping_exclude_cHRM=MagickTrue;
@@ -12206,57 +12184,54 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
           mng_info->ping_exclude_zTXt=MagickTrue;
         }
 
-      if (LocaleNCompare(value+i,"bkgd",4) == 0)
+      if (IsOptionMember("bkgd",value) != MagickFalse)
         mng_info->ping_exclude_bKGD=MagickFalse;
 
-      if (LocaleNCompare(value+i,"chrm",4) == 0)
+      if (IsOptionMember("chrm",value) != MagickFalse)
         mng_info->ping_exclude_cHRM=MagickFalse;
 
-      if (LocaleNCompare(value+i,"date",4) == 0)
+      if (IsOptionMember("date",value) != MagickFalse)
         mng_info->ping_exclude_date=MagickFalse;
 
-      if (LocaleNCompare(value+i,"exif",4) == 0)
+      if (IsOptionMember("exif",value) != MagickFalse)
         mng_info->ping_exclude_EXIF=MagickFalse;
 
-      if (LocaleNCompare(value+i,"gama",4) == 0)
+      if (IsOptionMember("gama",value) != MagickFalse)
         mng_info->ping_exclude_gAMA=MagickFalse;
 
-      if (LocaleNCompare(value+i,"iccp",4) == 0)
+      if (IsOptionMember("iccp",value) != MagickFalse)
         mng_info->ping_exclude_iCCP=MagickFalse;
 
     /*
-      if (LocaleNCompare(value+i,"itxt",4) == 0)
+      if (IsOptionMember("itxt",value) != MagickFalse)
         mng_info->ping_exclude_iTXt=MagickFalse;
      */
 
-      if (LocaleNCompare(value+i,"gama",4) == 0)
-        mng_info->ping_exclude_gAMA=MagickFalse;
-
-      if (LocaleNCompare(value+i,"offs",4) == 0)
+      if (IsOptionMember("offs",value) != MagickFalse)
         mng_info->ping_exclude_oFFs=MagickFalse;
 
-      if (LocaleNCompare(value+i,"phys",4) == 0)
+      if (IsOptionMember("phys",value) != MagickFalse)
         mng_info->ping_exclude_pHYs=MagickFalse;
 
-      if (LocaleNCompare(value+i,"srgb",4) == 0)
+      if (IsOptionMember("srgb",value) != MagickFalse)
         mng_info->ping_exclude_sRGB=MagickFalse;
 
-      if (LocaleNCompare(value+i,"text",4) == 0)
+      if (IsOptionMember("text",value) != MagickFalse)
         mng_info->ping_exclude_tEXt=MagickFalse;
 
-      if (LocaleNCompare(value+i,"trns",4) == 0)
+      if (IsOptionMember("trns",value) != MagickFalse)
         mng_info->ping_exclude_tRNS=MagickFalse;
 
-      if (LocaleNCompare(value+i,"vpag",4) == 0)
+      if (IsOptionMember("vpag",value) != MagickFalse)
         mng_info->ping_exclude_vpAg=MagickFalse;
 
-      if (LocaleNCompare(value+i,"zccp",4) == 0)
+      if (IsOptionMember("zccp",value) != MagickFalse)
         mng_info->ping_exclude_zCCP=MagickFalse;
 
-      if (LocaleNCompare(value+i,"ztxt",4) == 0)
+      if (IsOptionMember("ztxt",value) != MagickFalse)
         mng_info->ping_exclude_zTXt=MagickFalse;
 
-      if (LocaleNCompare(value+i,"all",3) == 0)
+      if (IsOptionMember("all",value) != MagickFalse)
         {
           mng_info->ping_exclude_bKGD=MagickFalse;
           mng_info->ping_exclude_cHRM=MagickFalse;
@@ -12275,7 +12250,6 @@ static MagickBooleanType WritePNGImage(const ImageInfo *image_info,Image *image)
           mng_info->ping_exclude_zTXt=MagickFalse;
           i--;
         }
-      }
     }
   }
 
