@@ -1,3 +1,7 @@
+2014-07-25  6.8.9-7 Glenn Randers-Pehrson <glennrp@image...>
+  * Use IsOptionMember() instead of LocaleNCompare() in coders/png.c to
+    parse the list of excluded and included PNG chunks.
+
 2014-07-25  6.8.9-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.9-6, SVN revision 16207.
 
